--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
-hostfile = /opt/cloud-training/hosts
-private_key_file=/opt/cloud-training/id_rsa
+hostfile = /opt/k8s/hosts.ini
+private_key_file=/opt/k8s/id_rsa
 host_key_checking = False
 retry_files_enabled = False
 forks = 30
