--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -42,7 +42,7 @@
         - httpie
 
 - name: Master and Worker Nodes
-  hosts: master,worker
+  hosts: masters,nodes
   tasks:
     - name: Ping
       ping:
@@ -81,7 +81,7 @@
         replace: "    dns-nameservers 10.96.0.10 8.8.8.8 8.8.4.4"
 
 - name: Master Node
-  hosts: master
+  hosts: masters
   tasks:
     - name: Ping
       ping:
@@ -119,7 +119,7 @@
         - "{{ 'node-role.kubernetes.io/master:NoSchedule' in kubectl_describe_node_master_result.stdout }}"
 
 - name: Worker Nodes
-  hosts: worker
+  hosts: nodes
   tasks:
     - name: Ping
       ping:
