Update stack and dib elements

--- a/env.yml
+++ b/env.yml
@@ -1,6 +1,5 @@
 parameters:
-  image: k8s-ubuntu-16.04
+  image: ubuntu-16.04-server
   flavor: m1.small
-  security_group_name: 86f48a0b-99f8-41ed-8a24-ed69d8deeeef
   private_net: 95be5d06-b6e7-4571-8998-7ea9ca21a384
   public_net: b164fae0-3dc3-4309-b464-a08d8aab8fef
