--- a/kubeadm/stack.yml
+++ b/kubeadm/stack.yml
@@ -74,7 +74,7 @@ resources:
         - protocol: tcp
           port_range_min: 10250
           port_range_max: 10250
-        - protocol: tcp
+        - protocol: udp
           port_range_min: 8472
           port_range_max: 8472
        
