--- a/streamsets/env.yaml
+++ b/streamsets/env.yaml
@@ -1,7 +1,7 @@
 parameters:
   image: streamset
   flavor: m1.small
-  key: wu
+  key: cloudkey
   security_group_name: 86f48a0b-99f8-41ed-8a24-ed69d8deeeef
   private_net: 95be5d06-b6e7-4571-8998-7ea9ca21a384
   public_net: b164fae0-3dc3-4309-b464-a08d8aab8fef
