--- a/kubeadm/env.yml
+++ b/kubeadm/env.yml
@@ -1,6 +1,8 @@
 parameters:
-  image: ubuntu-16.04-k8s
+  key_name: test
+  master_image: ubuntu-k8s-v1.13
+  node_image: ubuntu-k8s-v1.13
   master_flavor: m1.medium
   node_flavor: m1.medium
-  private_net: bc6b61a7-df3f-420e-8f72-5524269b851e
-  public_net: b164fae0-3dc3-4309-b464-a08d8aab8fef
+  private_net: private
+  public_net: public
